Fix list item overflow & line height

--- a/styles/top.css
+++ b/styles/top.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+:root {
+  --list-line-height: 30px;
+}
+
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
@@ -11,7 +15,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0;
+  margin: 0 0 10px 0;
 }
 
 h2 {
@@ -24,9 +28,26 @@ ul, ol {
   padding-left: 20px;
 }
 
+/*
 ul.no-bullets, ol.no-bullets {
   list-style-type: none;
   padding-left: 0;
+}
+*/
+
+.list-item {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.list-item-left, .list-item-right {
+  display: inline-block;
+  line-height: var(--list-line-height);
+}
+
+.list-item-right {
+  padding-left: 5px;
 }
 
 .clickable, .button {
@@ -39,8 +60,8 @@ ul.no-bullets, ol.no-bullets {
   position: relative;
   display: inline-block;
   border: 1px solid black;
-  width: 20px;
-  height: 20px;
+  width: var(--list-line-height);
+  height: var(--list-line-height);
 }
 
 .checkmark:after {
